k8/manifests/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-deployment
  labels:
    app: go
spec:
  replicas: 4
  selector:
    matchLabels:
      app: go
  template:
    metadata:
      labels:
        app: go
    spec:
      containers:
      - name: go-app
        image: aditya807/go:latest
        ports:
        - containerPort: 8080
