k8/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-deployment
spec:
  selector:
    app: go-web-app
  type: NodePort
  ports:
    - protocol: TCP
      #system port 
      port: 80
      # port on which application is running
      targetPort: 8080
      # port on which we are routing the application traffic 
      nodePort: 30009
