k8/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-backend
spec:
  ingressClassName: nginx
  rules:
    - host: garax.club
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: go-app-deployment
                port:
                  number: 80
          #- path: /courses
          #  pathType: ImplementationSpecific
          #  backend:
          #    service:
          #      name: go-app-deployment
          #      port:
          #        number: 80
